selection with mouse

--- a/index.html
+++ b/index.html
@@ -6,11 +6,43 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Game of Thrones</title>
-  <link rel="stylesheet" href="./css/style.css">in
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
 
+  <main>
+    <section>
+      <div class="character__container">
+      </div>
+    </section>
+
+    <aside>
+      <h1>Game of thrones</h1>
+
+      <div class="selected__character">
+
+        <img src="./assets/pictures/got.jpg" alt="fddg" class="selected__image">
+
+        <div class="selected__details">
+          <p class="selected__name"></p>
+          <img src="" alt="" class="selected__house">
+        </div>
+
+        <p class="selected__description"></p>
+
+        <div class="navigation">
+          <button class="next">&#5171</button>
+          <div class="search">
+            <p class="search__icon">&#128269</p>
+            <input class="search__input" type="text" placeholder="search a character">
+          </div>
+        </div>
+
+      </div>
+    </aside>
+
+  </main>
 </body>
 
 <script type="module" src="./js/got.js"></script>
