selected character highlight

--- a/index.html
+++ b/index.html
@@ -32,10 +32,9 @@
         <p class="selected__description"></p>
 
         <div class="navigation">
-          <button class="next">&#5171</button>
+          <button class="search__button">&#5171</button>
           <div class="search">
-            <p class="search__icon">&#128269</p>
-            <input class="search__input" type="text" placeholder="search a character">
+            <input class="search__input" type="text" placeholder="&#128269 search a character">
           </div>
         </div>
 
