--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
 
   <main>
+
     <section>
       <div class="character__container">
       </div>
@@ -22,7 +23,7 @@
 
       <div class="selected__character">
 
-        <img src="./assets/pictures/got.jpg" alt="fddg" class="selected__image">
+        <img src="./assets/pictures/got.jpg" alt="base" class="selected__image">
 
         <div class="selected__details">
           <p class="selected__name"></p>
